Implementing flex and bison for gus database files. This will take the place of a gus db in the case mysql or ldap is not available, and solve some problems with caching as well.

--- a/doc/GROUP5/proto/Makefile
+++ b/doc/GROUP5/proto/Makefile
@@ -1,12 +1,16 @@
 PROG=gus-test
 VERSION=1.0
+PARSER=db
 CC=g++
-INC=-Isrc/mysql-connector-c++-1.1.0-linux-glibc2.3-x86-32bit/include -Isrc/mysql-connector-c++-1.1.0-linux-glibc2.3-x86-32bit/lib
+INC=-Isrc/mysql-connector-c++-1.1.0-linux-glibc2.3-x86-32bit/include -Isrc/mysql-connector-c++-1.1.0-linux-glibc2.3-x86-32bit/lib -Isrc/mysql-connector-c++-1.1.0-linux-glibc2.3-x86-32bit/include/cppconn
+LEX=flex
+YACC=bison
 CCFLAGS=-g -pg $(INC)
-OBJS= main.o test.o db.o
+CFLAGS=-g -pg $(INC)
+OBJS=main.o db.o $(PARSER).tab.o lex.yy.o
 
 $(PROG): $(OBJS)
-	$(CC) $(CCFLAGS) $(OBJS) -o $(PROG)
+	$(CC) $(CCFLAGS) $(OBJS) -lfl -o $(PROG)
 
 main.o: main.cpp gusConf.h
 	$(CC) $(CCFLAGS) main.cpp -c
@@ -17,5 +21,11 @@ test.o: test.cpp test.h gusConf.h
 db.o: db.cpp db.h gusConf.h
 	$(CC) $(CCFLAGS) db.cpp -c 
 
+$(PARSER).tab.c $(PARSER).tab.h: $(PARSER).y
+	$(YACC) -d -t $(PARSER).y
+
+lex.yy.c: $(PARSER).l $(PARSER).tab.h
+	$(LEX) $(PARSER).l
+
 clean:
-	rm *.o
+	rm *.o *.tab.h *.tab.c lex.yy.c $(PROG)
